# roscompile

./: CMakeLists.txt
scripts/: roscompile
src/roscompile/: cmake.py  main.py  package_xml.py
test/: compile_tests.py  zipfile_interface.py
